modules/k8s-ingress-advanced/fussy-ingress-plain.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: fussy-plain
spec:
  rules:
    - host: @@HOSTNAME@@
      http:
        paths:
          - backend:
              serviceName: fussy-rs
              servicePort: 80
            path: /
